k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rotten-potatoes
  labels:
    istio-injection: enabled
