k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rotten-potatoes-api
  namespace: rotten-potatoes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rotten-potatoes-api
  template:
    metadata:
      labels:
        app: rotten-potatoes-api
    spec:
      containers:
        - name: rotten-potatoes-api
          image: paulofponciano/rotten-potatoes-api:latest
          imagePullPolicy: 'Always'
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rotten-potatoes-api
  namespace: rotten-potatoes
spec:
  selector:
    app: rotten-potatoes-api
  ports:
    - name: http
      port: 8080
      targetPort: http
