k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rotten-potatoes-web
  namespace: rotten-potatoes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rotten-potatoes-web
  template:
    metadata:
      labels:
        app: rotten-potatoes-web
    spec:
      containers:
        - name: rotten-potatoes-web
          image: paulofponciano/rotten-potatoes-web:latest
          imagePullPolicy: 'Always'
          ports:
            - name: http
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: rotten-potatoes-web
  namespace: rotten-potatoes
spec:
  selector:
    app: rotten-potatoes-web
  ports:
    - name: http
      port: 5000
      targetPort: http
