k8s/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rotten-potatoes-gateway
  namespace: rotten-potatoes
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rotten-potatoes
  namespace: rotten-potatoes
spec:
  gateways:
    - rotten-potatoes-gateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: rotten-potatoes-web.rotten-potatoes.svc.cluster.local
            port:
              number: 5000
          weight: 100
